--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Board</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="./assets/css/stylesheet.css">
 </head>
 <body>
     <div class="container">
