--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Board</title>
+    <title>Weather Dashboard</title>
     <link rel="stylesheet" href="./assets/css/stylesheet.css">
 </head>
 <body>
     <div class="container">
         <h1>Weather Dashboard</h1>
         <form id="search-bar">
-            <input type="text" id="city-input" placeholder="Denver, Tuscson, New York..." required>
-            <button  type="submit">Search</button>
+            <input type="text" id="city-input" placeholder="Denver, Tucson, New York..." required>
+            <button type="submit">Search</button>
         </form>
-        <div id="current"></div>
-        <div id="forecast"></div>
+        
+        <!-- EACH DIV BELOW WILL GET DATA APPENDED TO ITSELF USING OUR JS FILE -->
+
+        <div id="current-weather"></div>
+        <div id="forecast" class="forecast-container"></div>
         <div id="history"></div>
     </div>
-    <script src="./assets/js/javascript.javascript"></script>
+    <script src="./assets/js/javascript.js"></script>
 </body>
 </html>
